# embedded_samples_stm32c0

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  stm32c0_sample.ioc
Core/Src/: main.c
project_lib/: CMakeLists.txt
project_lib/include/: dummy.h
project_lib/include/device/: gpio_pin.h
project_lib/src/: dummy.c
project_lib/src/device/: gpio_pin.c
test/: CMakeLists.txt
test/src/: ut_dummy.cpp
test/src/device/: ut_gpio_pin.cpp
test/src/mock/: ut_mock_hal_gpio.cpp
